Fix the score board with correct computation