@@ -121,7 +121,7 @@ public class GameServer {
 
     private void notifyFirstPlayerOfCurrentPlayers() throws IOException {
         if (!clients.isEmpty()) {
-            ClientHandler firstPlayer = clients.getFirst(); // 第一个加入的玩家
+            ClientHandler firstPlayer = clients.get(0); // 第一个加入的玩家
             int playerCount = clients.size();
             firstPlayer.sendMessage("Currently, there are " + playerCount + " players in the game.");
         }
@@ -163,9 +163,8 @@ public class GameServer {
         for (ClientHandler client : clients) {
             client.sendGameState(gameState);
         }
-
         // 因为只有当前操作的玩家需要更新分数板，所以只在 client 中找到 currentPlayer
-        clients.get(currentPlayer).sendPersonalScore(gameState);
+        clients.get(currentPlayer).sendPersonalScore();
     }
 
 
